--- a/动态规划系列/背包问题.md
+++ b/动态规划系列/背包问题.md
@@ -37,6 +37,8 @@ val = [4, 2, 3]
 题目就是这么简单，一个典型的动态规划问题。这个题目中的物品不可以分割，要么装进包里，要么不装，不能说切成两块装一半。这就是 0-1 背包这个名词的来历。
 
 解决这个问题没有什么排序之类巧妙的方法，只能穷举所有可能，根据我们 [动态规划详解](https://labuladong.gitee.io/algo/) 中的套路，直接走流程就行了。
+### 背包问题原理
+<a href="https://zhuanlan.zhihu.com/p/107139719"></a>
 
 ### 动规标准套路
 
